# dotray

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Img.cpp  Img.hpp
src/engine/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  main.cpp
src/img/: Img.cpp  Img.hpp  PGM.cpp  PGM.hpp
src/math/: Matrix.cpp  Matrix.hpp  Point.cpp  Point.hpp  Transform.hpp  Vector.cpp  Vector.hpp
src/shapes/: Line.cpp  Line.hpp  Plan.cpp  Plan.hpp  Shape.hpp  Triangle.cpp  Triangle.hpp
src/utils/: Return.hpp  commonTypes.hpp
tests/: CMakeLists.txt  img.md5  imgRGB.md5
tests/engine/: testCamera.cpp
tests/img/: testImg.cpp  testPGM.cpp
tests/math/: testVector.cpp
tests/shapes/: testPlan.cpp
